# TreeLib

./: CMakeLists.txt  README.md  main.cpp
src/: demo.cpp  demo.hpp
src/trees/: avl.hpp  bst.hpp  collection.hpp  datatypes.cpp  datatypes.hpp  exceptions.cpp  exceptions.hpp  nodes.hpp  order.hpp  rb.hpp  splayt.hpp  trees.hpp
test/: correctness_check.cpp  crash_check.cpp  exception_check.cpp  test_utils.cpp  test_utils.hpp
